# embedding

./: report.md
datagen/: generate.py  label.csv  rasp_code.py  read_data.py  recognize.py  save.ckpt.index  surf_single.py  train.py
datagen/splitted_pic/: splitted_base.txt
embedding/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.py  camera1.py  cmake_install.cmake  init_openvino.sh  main  main.cpp  surf.py  surf_recog.py
embedding/face_recog/: recog.py
embedding/splitted_pic/: splitted_base.csv
embedding/testbench/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  main.cpp
example/: forwarding.py  index.html  socket_test.py
server/: compile.sh  main  main.cpp  tcp_pthread_server.hpp  tcp_socket.hpp  新建文本文档.md
